Commenting Projects section

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -98,7 +98,7 @@
       {% endif %}
 
 
-      {% if site.resume_section_projects %}
+      <!-- {% if site.resume_section_projects %}
       <!-- begin Projects -->
       <section class="content-section">
         <header class="section-header">
@@ -116,7 +116,7 @@
 
       </section>
       <!-- end Projects -->
-      {% endif %}
+      {% endif %} -->
 
       {% if site.resume_section_skills %}
       <!-- begin Skills -->
